# cts2023-turn-cygnicator

./: .gitignore  .gitmodules  README.md
docs/: README.md
docs/img/: final_solution.webm  pcb_flash_steps.xcf  pcb_guide_flash_steps.xcf  periodicity.webm
firmware/: BUILD.md  CMakeLists.txt  build.sh  flash.sh  platformio.ini  run-picocom.sh  run-sim.sh  simulator.cmake
firmware/.devcontainer/: devcontainer.json
firmware/TraceRecorder/config/: trcConfig.h
firmware/TraceRecorder/include/: trcKernelPort.h
firmware/blinky-demo/: CMakeLists.txt  main.c
firmware/docker/: Dockerfile
firmware/inc/: FreeRTOSConfig.h  cygnicator_gpio.h  cygnicator_headlights.h
firmware/simulator/: car_ascii.h  cygni_ascii_logo.h  simulator.c  simulator.h
firmware/simulator/hardware/: gpio.h  pwm.h  stdlib.h
firmware/simulator/pico/: gpio.h  stdio.h  stdlib.h  time.h
firmware/turn-cygnicator/: CMakeLists.txt  main.c
firmware/turn-cygnicator-hampus/: CMakeLists.txt  main.c  main.cpp
firmware/turn-cygnicator-kalle/: CMakeLists.txt  main.cpp
firmware/turn-cygnicator-kalle/src/: buzzer.cpp  buzzer.hpp  led.cpp  led.hpp  main.cpp  telltale.cpp  telltale.hpp
firmware/turn-cygnicator-rasmus/: CMakeLists.txt  main.c  main.cpp
firmware/turn-cygnicator-reference/: CMakeLists.txt  main.c  main.cpp  types.h
pcb/idiot-lights-pcb/: fp-lib-table  idiot-lights-pcb.kicad_pcb  idiot-lights-pcb.kicad_pro  idiot-lights-pcb.kicad_sch  sym-lib-table
pcb/idiot-lights-pcb/bom/: ibom.html
pcb/libs/Cygni_logo/cygni_logo.pretty/: cygni_logo.kicad_mod  cygni_logo_13x5mm.kicad_mod  cygni_logo_26x10mm.kicad_mod  cygni_logo_35x13_4mm.kicad_mod
pcb/libs/Telltale_icons/: arror_icon.kicad_mod  break_warning.kicad_mod  car.kicad_mod  golf.kicad_mod  hazard_warning.kicad_mod  turnindicator_left.kicad_mod
pcb/libs/cts_cygni_qr_code/: qr.kicad_mod  qr_45x45.kicad_mod
puml/: README.md  step_2.iuml  step_3.iuml  step_4.iuml  step_5.iuml  step_6.iuml  step_7.iuml  tick_tock.iuml
simulator/: a.out  main.c
